[gd_scene load_steps=12 format=3 uid="uid://l3rbfoaqqqk5"]

[ext_resource type="Script" path="res://Player.gd" id="1_ejti4"]
[ext_resource type="Texture2D" uid="uid://brk2a3h2ia6la" path="res://Guy.png" id="2_daqp4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec2i2"]
size = Vector2(22.5, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_h56vk"]
atlas = ExtResource("2_daqp4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwsea"]
atlas = ExtResource("2_daqp4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k04r"]
atlas = ExtResource("2_daqp4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqkfq"]
atlas = ExtResource("2_daqp4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm3qq"]
atlas = ExtResource("2_daqp4")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqr6"]
atlas = ExtResource("2_daqp4")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fv0lg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h56vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwsea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k04r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqkfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm3qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqr6")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fulfv"]
radius = 23.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(208, 76)
script = ExtResource("1_ejti4")
metadata/_edit_group_ = true

[node name="MapCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 7)
shape = SubResource("RectangleShape2D_ec2i2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fv0lg")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.850157

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="PickupCollideShape" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_fulfv")

[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="area_exited" from="InteractArea" to="." method="_on_interact_area_area_exited"]
